--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
         <p><h4>Här är några navigationslänkar!</h4></p>
         
         <ul>
-            <li><a href="../Index.hmtl>">Index</a></li>
+            <li><a href="../Index.html>">Index</a></li>
             <li><a href="/Pages/Laborationer.html">Laborationer</a></li>
             <li><a href="/Pages/Kontakt.html">Kontakt</a></li>
             <li><a href="/Pages/Presentation.html">Presentation</a></li>
