nu är allt klart

--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -34,6 +34,11 @@
      </fieldset>
 
      <input type="submit" value="Skicka!">
+     
+            <li><a href="../Index.html">Index</a></li>
+            <li><a href="Laborationer.html">Laborationer</a></li>
+            <li><a href="Kontakt.html">Kontakt</a></li>
+            <li><a href="Presentation.html">Presentation</a></li>
 
 </form>
 
