--- a/Pages/Laborationer.html
+++ b/Pages/Laborationer.html
@@ -18,9 +18,9 @@
         <!--Här har jag mina länkar till de olika katalogerna på min sida!-->
         <ul>
             <li><a href="../Index.html">Index</a></li>
-            <li><a href="/Pages/Laborationer.html">Laborationer</a></li>
-            <li><a href="/Pages/Kontakt.html">Kontakt</a></li>
-            <li><a href="/Pages/Presentation.html">Presentation</a></li>
+            <li><a href="Laborationer.html">Laborationer</a></li>
+            <li><a href="Kontakt.html">Kontakt</a></li>
+            <li><a href="Presentation.html">Presentation</a></li>
         </ul>
         
         <h2>Webbteknisk introduktion</h2>
