--- a/Pages/Laborationer.html
+++ b/Pages/Laborationer.html
@@ -142,15 +142,15 @@
                <dt>Skriv den absoluta sökvägen till filen bottom.html</dt>
                   <dd>www.server.se/www/html//Pages/bottom.html</dd>
                <dt>Skriv den relativa sökvägen från filen default.html till filen top.html</dt>
-                  <dd>/pages/bottom.html</dd>
+                  <dd>pages/bottom.html</dd>
                <dt>Skriv den relativa sökvägen från filen botton.html till filen index.html</dt>
                   <dd>../bottom../html/index.html</dd>
                <dt>Skreiv den absoluta sökvägen till filen index.html</dt>
                   <dd>www.server.se/www/index.html</dd>
                <dt>Skriv den relativa sökvägen från filen top.html till bottom.html</dt>
-                  <dd>/bottom.html</dd>
+                  <dd>bottom.html</dd>
                <dt>Skriv den relativa sökvägen från filen index.html till top.html</dt>
-                  <dd>/html/pages/top.html</dd>
+                  <dd>html/pages/top.html</dd>
                
             </dl></li>
             
