nu är den redovisad

--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -23,8 +23,7 @@
        </select><br />
        
        Titel: <input type="text" name="text"/><br />
-       Fråga: <textarea name="textområde" rows="4" cols="30">
-       </textarea>
+       Fråga: <textarea name="textområde" rows="4" cols="30"></textarea>
     </fieldset>
 
      <fieldset>
