nu är det finare

--- a/Index.html
+++ b/Index.html
@@ -51,7 +51,7 @@
         <h4>Här är några navigationslänkar!</h4>
         
         <ul>
-            <li><a href="/Index.html">Index</a></li>
+            <li class="active"><a href="/Index.html">Index</a></li>
             <li><a href="/Pages/Laborationer.html">Laborationer</a></li>
             <li><a href="/Pages/Kontakt.html">Kontakt</a></li>
             <li><a href="/Pages/Presentation.html">Presentation</a></li>
