--- a/Pages/Kontakt.html
+++ b/Pages/Kontakt.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8"/> <!--här ser vi att jag har valt att förbereda sidan för användning av å,ä,ö-->
         
         <Title>Kontakt</Title>
+        <link rel="stylesheet" href="../css/style.css" type="text/css" />
     </head>
 
 <body>
