--- a/Pages/Presentation.html
+++ b/Pages/Presentation.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8"/> <!--här ser vi att jag har valt att förbereda sidan för användning av å,ä,ö-->
         
         <Title>Kevin Amilund Nilsson - Min Första Sida</Title>
+        <link rel="stylesheet" href="../css/style.css" type="text/css" />
     </head>
     
     <!--Här Har jag en presentation om mig och listor i listor inom olika kategorier-->
