--- a/Pages/Laborationer.html
+++ b/Pages/Laborationer.html
@@ -45,6 +45,7 @@
             <li class="active"><a class="Laborationer" href="Laborationer.html">Laborationer</a></li>
             <li><a class="Kontakt" href="Kontakt.html">Kontakt</a></li>
             <li><a class="Presentation" href="Presentation.html">Presentation</a></li>
+            <li><a Class="Newtags" href="../TestAvNyaTaggar/Newtags.html">Min testsida!</a></li>
         </ul>
         </div>
         <div id="content">
